applications/jenkins-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins-test
  name: jenkins-test
