applications/jenkins-test/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/jenkins:lts
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 12000m
              memory: 32000Mi
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins
