applications/jenkins-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openlookeng-jenkins-ingress
spec:
  tls:
    - hosts:
        - test-jenkins.openlookeng.io
      secretName: openlookeng-jenkins-tls
  rules:
    - host: test-jenkins.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: jenkins-test
              servicePort: 80
            path: /
